--- a/ShopGo/CartAnimationFiles/CartAnimationStoryboard.storyboard
+++ b/ShopGo/CartAnimationFiles/CartAnimationStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m1q-6n-QjW">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -17,13 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cart" translatesAutoresizingMaskIntoConstraints="NO" id="pqZ-sD-reP">
-                                <rect key="frame" x="59" y="160" width="275" height="422"/>
+                                <rect key="frame" x="59" y="204" width="275" height="378"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="275" id="gcw-bq-mHR"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shop Go" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ak-3L-7N8">
-                                <rect key="frame" x="129.33333333333337" y="553" width="134.66666666666663" height="40.666666666666629"/>
+                                <rect key="frame" x="129.33333333333337" y="597" width="134.66666666666663" height="40.666666666666629"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
                                 <color key="textColor" red="0.31764706970000001" green="0.28627452250000002" blue="0.63921570780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -32,11 +32,11 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="0ak-3L-7N8" firstAttribute="top" secondItem="pqZ-sD-reP" secondAttribute="bottom" constant="15" id="2qY-Xi-7vP"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pqZ-sD-reP" secondAttribute="trailing" constant="59" id="3an-D3-ddL"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="pqZ-sD-reP" secondAttribute="bottom" constant="236" id="8NL-hj-Pc0"/>
                             <constraint firstItem="pqZ-sD-reP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="59" id="OV3-jf-HyO"/>
                             <constraint firstItem="pqZ-sD-reP" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="101" id="ObB-H8-8g0"/>
-                            <constraint firstItem="0ak-3L-7N8" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="494" id="R5y-jl-l9g"/>
                             <constraint firstItem="0ak-3L-7N8" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="h9E-Ql-N6o"/>
                         </constraints>
                     </view>
@@ -47,6 +47,24 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1503.0534351145038" y="-11.267605633802818"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qx5-wb-tFl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m1q-6n-QjW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vf7-aJ-uJC">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="4aj-qG-gSe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wn2-s0-wve" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="576.33587786259545" y="-11.267605633802818"/>
         </scene>
