--- a/ShopGo/LoginSignup/LoginSignupStoryboard.storyboard
+++ b/ShopGo/LoginSignup/LoginSignupStoryboard.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -9,16 +9,55 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--On Boarding Page View Controller-->
+        <scene sceneID="w32-mT-3xM">
+            <objects>
+                <pageViewController storyboardIdentifier="OnBoardingPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ph3-bb-JQF" customClass="OnBoardingPageViewController" customModule="ShopGo" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qLE-Qf-ABv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1497" y="-3"/>
+        </scene>
+        <!--On Boarding View Controller-->
+        <scene sceneID="t5Q-EW-Lvd">
+            <objects>
+                <viewController storyboardIdentifier="OnBoardingViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hXX-dj-gSZ" customClass="OnBoardingViewController" customModule="ShopGo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mx4-qh-UPD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome2" translatesAutoresizingMaskIntoConstraints="NO" id="Xb9-nG-Mk0">
+                                <rect key="frame" x="32" y="193" width="350" height="350"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="0sb-ea-299"/>
+                                    <constraint firstAttribute="width" constant="350" id="cuZ-J1-cWg"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="CKD-kU-Zzm"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Xb9-nG-Mk0" firstAttribute="centerY" secondItem="Mx4-qh-UPD" secondAttribute="centerY" id="E2f-d5-ojz"/>
+                            <constraint firstItem="Xb9-nG-Mk0" firstAttribute="centerX" secondItem="Mx4-qh-UPD" secondAttribute="centerX" id="MRE-o9-QUQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="onBoardingImage" destination="Xb9-nG-Mk0" id="sv4-QT-dxC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WyU-PL-lIz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-730" y="-3"/>
+        </scene>
         <!--Login Signup View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="LoginSignupViewController" id="Y6W-OH-hqX" customClass="LoginSignupViewController" customModule="ShopGo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginSignupViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="LoginSignupViewController" customModule="ShopGo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6i-Ue-ztM" customClass="CustomButton" customModule="ShopGo" customModuleProvider="target">
-                                <rect key="frame" x="80" y="599" width="270" height="45"/>
+                                <rect key="frame" x="72" y="540" width="270" height="45"/>
                                 <color key="backgroundColor" name="ButtonColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="cf6-lW-5NU"/>
@@ -34,7 +73,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F2V-Z6-J7R" customClass="CustomButtonView" customModule="ShopGo" customModuleProvider="target">
-                                <rect key="frame" x="80" y="664" width="270" height="45"/>
+                                <rect key="frame" x="72" y="605" width="270" height="45"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akm-jQ-JbE" customClass="CustomLoginInnerButton" customModule="ShopGo">
                                         <rect key="frame" x="1" y="3" width="268" height="39"/>
@@ -61,11 +100,11 @@
                                     <constraint firstItem="akm-jQ-JbE" firstAttribute="centerX" secondItem="F2V-Z6-J7R" secondAttribute="centerX" id="RQ0-Ns-m9X"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cart" translatesAutoresizingMaskIntoConstraints="NO" id="bqL-fH-50a">
-                                <rect key="frame" x="34.666666666666657" y="109" width="361" height="390"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome1" translatesAutoresizingMaskIntoConstraints="NO" id="bqL-fH-50a">
+                                <rect key="frame" x="32" y="90" width="350" height="350"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="361" id="iqo-bc-pbf"/>
-                                    <constraint firstAttribute="height" constant="390" id="sHe-Ge-Wte"/>
+                                    <constraint firstAttribute="width" constant="350" id="iqo-bc-pbf"/>
+                                    <constraint firstAttribute="height" constant="350" id="sHe-Ge-Wte"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -76,7 +115,7 @@
                             <constraint firstItem="F2V-Z6-J7R" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="HQq-ii-cgm"/>
                             <constraint firstItem="bqL-fH-50a" firstAttribute="centerX" secondItem="b6i-Ue-ztM" secondAttribute="centerX" id="Jmn-EK-3nB"/>
                             <constraint firstItem="b6i-Ue-ztM" firstAttribute="top" secondItem="bqL-fH-50a" secondAttribute="bottom" constant="100" id="MlO-h4-lRX"/>
-                            <constraint firstItem="bqL-fH-50a" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="50" id="PIg-PZ-Erg"/>
+                            <constraint firstItem="bqL-fH-50a" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="70" id="PIg-PZ-Erg"/>
                             <constraint firstItem="bqL-fH-50a" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Unw-ze-tcj"/>
                             <constraint firstItem="F2V-Z6-J7R" firstAttribute="top" secondItem="b6i-Ue-ztM" secondAttribute="bottom" constant="20" id="nuC-Rt-05s"/>
                         </constraints>
@@ -94,7 +133,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cart" width="500" height="500"/>
+        <image name="welcome1" width="500" height="500"/>
+        <image name="welcome2" width="500" height="500"/>
         <namedColor name="ButtonColor">
             <color red="0.23899999260902405" green="0.27099999785423279" blue="0.63899999856948853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
