--- a/ShopGo/CreateCartScreen/CartScreenStoryboard.storyboard
+++ b/ShopGo/CreateCartScreen/CartScreenStoryboard.storyboard
@@ -55,7 +55,7 @@
                                 <rect key="frame" x="0.0" y="134" width="392" height="398"/>
                                 <color key="backgroundColor" red="0.96862745289999996" green="0.96470588450000005" blue="0.96862745289999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="XibTableViewCell" rowHeight="401" id="mjO-VL-irL" customClass="XibTableViewCell" customModule="ShopGo" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CartScreenXibTableViewCell" rowHeight="401" id="mjO-VL-irL" customClass="CartScreenXibTableViewCell" customModule="ShopGo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="392" height="401"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mjO-VL-irL" id="ZxS-dc-klu">
